--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Nikrajput/Photo-app-backend#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.25.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.11",
