--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Nikrajput/Photo-app-backend#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.25.1",
     "dotenv": "^10.0.0",
